lang.java.statics.test/tests/positive/packages/single-type-import-shadows-class-in-same-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    import q.B;
    public class A {
        public B b = (q.B) null;
    }

    [B]
    package p;
    public class B {}

}

[q] {

    [B]
    package q;
    public class B {}

}
