lang.java.statics.test/tests/negative/packages/relative-qualified-reference-to-class-in-nested-package.no.javtest
STATIX fail java\.names\.lexical-package-or-type-name.*\"q\"
JAVAC  fail package q does not exist

[p] {

    [A]
    package p;
    public class A {
        public q.B b;
    }

    [q] {

        [B]
        package p.q;
        public class B {}

    }

}
